--- a/src/main/resources/templates/registrarse.html
+++ b/src/main/resources/templates/registrarse.html
@@ -210,6 +210,7 @@
     </style>
 </head>
 <body>
+    <div th:replace="components/mensajes"></div>
     <main class="reg-main">
         <section class="reg-container">
             <div class="reg-header league-spartan">Registro de Cuenta</div>
