--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body class="light_mode">
+    <div th:replace="components/mensajes"></div>
+
     <main class="main">
         <div class="layout-wrapper">
             <section class="section-role-selection">
