--- a/src/main/resources/templates/admin/adminMenu.html
+++ b/src/main/resources/templates/admin/adminMenu.html
@@ -27,7 +27,7 @@
             <a href="/admin/productos" class="adm-link"><i class="fas fa-box-open"></i><span>Gestión de Productos</span></a>
             <a href="/admin/carta" class="adm-link"><i class="fas fa-utensils"></i><span>Gestionar Carta</span></a>
             <a href="/admin/clientes" class="adm-link"><i class="fas fa-user-friends"></i><span>Gestión de Clientes</span></a>
-            <a href="/admin/pedidos" class="adm-link"><i class="fas fa-shopping-cart"></i><span>Gestión de Pedidos</span></a>
+            <!--a href="/admin/pedidos" class="adm-link"><i class="fas fa-shopping-cart"></i><span>Gestión de Pedidos</span></a-->
             <a href="/admin/reportes" class="adm-link"><i class="fas fa-chart-line"></i><span>Reportes de Ingresos</span></a>
         </nav>
 
