--- a/src/main/resources/templates/admin/admin_reporte.html
+++ b/src/main/resources/templates/admin/admin_reporte.html
@@ -131,10 +131,10 @@
                     Ventas por Producto / Categoría
                 </div>
 
-                <div class="report-btn" onclick="abrirReporte('avance')">
+                <!--div class="report-btn" onclick="abrirReporte('avance')">
                     <i class="fas fa-calendar-alt"></i>
                     Avance Diario / Semanal / Mensual
-                </div>
+                </div-->
 
                 <div class="report-btn" onclick="abrirReporte('productos')">
                     <i class="fas fa-search"></i>
